--- a/style.css
+++ b/style.css
@@ -11,30 +11,29 @@ body {
 
 .skills {
     background-color: #fdf7f7;
+    width: 500px;
     padding: 10px;
     text-align: center;
-    width: 200px;
-    min-height: 100vh;
     box-shadow: 2px 0 8px rgba(0,0,0,0.05);
     display: flex;
     flex-direction: column;
     align-items: center;
-    position: fixed;
-    left: 0;
-    top: 0;
-    margin: 20px
+    height: 100vh;
+    overflow-y: auto;
+    overflow-x: hidden;
 }
 
 .skills img {
     height: 100px;
-    margin: 20px 0;
+    margin: 15px 0;
     transition: transform 0.3s;
 }
 
 .socials {
+    margin-right: 30px;
     display: flex;
     flex-direction: column;
-    gap: 20px;
+    gap: 10px;
     align-items: flex-start;
 }
 
@@ -67,8 +66,8 @@ body {
 }
 
 .main-content {
-    margin-left: 270px;
-    padding: 20px;
+    margin-left: 30px;
+    padding: 10px;
     display: flex;
     flex-direction: column;
     min-height: 100vh;
@@ -91,9 +90,12 @@ body {
 }
 
 .profile-pic {
-    width: 200px;
+    margin-top: 50px;
+    margin-right: 50px;
+    border: 2px solid #78788b;
+    width: 210px;
     object-fit: cover;
-    border-radius: 10%;
+    border-radius: 5%;
     box-shadow: 0 2px 8px rgba(0,0,0,0.08);
 }
 
@@ -107,7 +109,6 @@ body {
     flex: 1;
     padding: 20px;
     background: #fff;
-    border-radius: 12px;
     box-shadow: 0 2px 8px rgba(0,0,0,0.05);
 }
 
