--- a/style.css
+++ b/style.css
@@ -1,4 +1,6 @@
+@import "tailwindcss";
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&family=Roboto+Mono:wght@400;700&display=swap');
+
 body {
     font-family: 'Poppins', sans-serif;
     margin: 0;
